@@ -6,7 +6,7 @@
 <$tm=get_lastmodified(v.script_dir)>
 <$s = v.blog>
 <@>
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="<@System_coding>">
