@@ -6,10 +6,15 @@
 -[http://adiary.org/ver2to3.html:Version2 からの移行機能]が付きました。
 -theme/ ディレクトリ以下にテーマやテンプレートに無関係なものが増えてきたので、それらを pub-dist/ に移動しました。
 -テーマの色変更機能で「設定できる色が多すぎる」問題に対処するため、色をいくつかの基本色に連動させて動かす機能を付けました。
+-表示パスワード機能を付けました。ブログの表示にパスワードをかける機能です。
+-プライベートブログ時に「秘密のパスワード」を入力することでブログを表示できる機能を追加。
 -【記法】目次記法の機能を拡張し、出力階層を選択できるようにしました（{{[*toc0] [*toc2]}}の追加）。
 -【plugin】タイトル文字の表示位置調整が非常に分かりにくかったので設定方法を見直しました。
+-【plugin】ヘッダとメイン部用の検索ボックスモジュールを用意しました。
 -【plugin】サイドバー検索ボックスのHTML形式を変更しました。（雑多なidを削除しました）
--【アルバム】【fix】大文字の拡張子（.JPG等）を画像ファイルと識別できない。
+-【plugin】module_id の仕様を変更しました（β3の時の仕様に戻しました）。
+-【fix】【plugin】プライベートブログ切替時に、デザインモジュールで使用していた背景画像が表示できなくなる。
+-【fix】【アルバム】大文字の拡張子（.JPG等）を画像ファイルと識別できない。
 -【fix】「ブログとwikiコンテンツ等を分離して扱う」にチェックを入れるとコンテンツページが検索にヒットしない。（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
 -【fix】theme/以下のテンプレート読み込み機能がうまく動作していなかった。なおVer3の[bf:テンプレートディレクトリ名は _skel です]（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
 -【fix】【Compiler】{{<@ifcall(cond, 'file')>}} 等で cond が false のとき、condの値が出力されてしまう。
